--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -20,7 +20,7 @@
       </trans-unit>
       <trans-unit id="392942015236586892" datatype="html">
         <source>Angular logo</source>
-        <target>Logo d'Angular</target>
+        <!-- <target>Logo d'Angular</target> -->
       </trans-unit>
       <trans-unit id="2002272803511843863" datatype="html">
         <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes ago} }</source>
@@ -45,6 +45,14 @@
       <trans-unit id="myId" datatype="html">
         <source>Hello</source>
         <target state="new">Bonjour</target>
+      </trans-unit>
+      <trans-unit id="newTest" datatype="html">
+        <source>my-component works!</source>
+        <target>Bonjour my-component!</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">1,2</context>
+        </context-group>
       </trans-unit>
     </body>
   </file>
