--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -62,14 +62,21 @@
 </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">17,21</context>
+          <context context-type="linenumber">17,22</context>
         </context-group>
       </trans-unit>
       <trans-unit id="2508975984005233379" datatype="html">
         <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION"/> minutes ago by {VAR_SELECT, select, male {male} female {female} other {other}}}}</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">17,21</context>
+          <context context-type="linenumber">17,22</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="newTest" datatype="html">
+        <source>my-component works!</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">1,2</context>
         </context-group>
       </trans-unit>
     </body>
