--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -1,58 +1,39 @@
-<!-- The `messages.fr.xlf` after translation for documentation purposes -->
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="en" datatype="plaintext" original="ng2.template">
+  <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
-      <trans-unit id="introductionHeader" datatype="html">
-        <source>Hello i18n!</source>
-        <note priority="1" from="description">An introduction header for this sample</note>
-        <note priority="1" from="meaning">User welcome</note>
-      </trans-unit>
-      <trans-unit id="introductionHeader" datatype="html">
-        <source>Hello i18n!</source>
-        <target>Bonjour i18n !</target>
-        <note priority="1" from="description">An introduction header for this sample</note>
-        <note priority="1" from="meaning">User welcome</note>
-      </trans-unit>
-      <trans-unit id="5206857922697139278" datatype="html">
-        <source>I don't output any element</source>
-        <target>Je n'affiche aucun élément</target>
-      </trans-unit>
-      <trans-unit id="392942015236586892" datatype="html">
-        <source>Angular logo</source>
-        <!-- <target>Logo d'Angular</target> -->
-      </trans-unit>
-      <trans-unit id="2002272803511843863" datatype="html">
-        <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes ago} }</source>
-        <target>{VAR_PLURAL, plural, =0 {à l'instant} =1 {il y a une minute} other {il y a <x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes} }</target>
-      </trans-unit>
-      <trans-unit id="3560311772637911677" datatype="html">
-        <source>The author is <x id="ICU" equiv-text="{gender, select, male {...} female {...} other {...}}"/></source>
-        <target>L'auteur est <x id="ICU" equiv-text="{gender, select, male {...} female {...} other {...}}"/></target>
-      </trans-unit>
-      <trans-unit id="7670372064920373295" datatype="html">
-        <source>{VAR_SELECT, select, male {male} female {female} other {other} }</source>
-        <target>{VAR_SELECT, select, male {un homme} female {une femme} other {autre} }</target>
-      </trans-unit>
-      <trans-unit id="3967965900462880190" datatype="html">
-        <source>Updated: <x id="ICU" equiv-text="{minutes, plural, =0 {...} =1 {...} other {...}}"/></source>
-        <target>Mis à jour: <x id="ICU" equiv-text="{minutes, plural, =0 {...} =1 {...} other {...}}"/></target>
-      </trans-unit>
-      <trans-unit id="2508975984005233379" datatype="html">
-        <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes ago by {VAR_SELECT, select, male {male} female {female} other {other} }} }</source>
-        <target>{VAR_PLURAL, plural, =0 {à l'instant} =1 {il y a une minute} other {il y a <x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes par {VAR_SELECT, select, male {un homme} female {une femme} other {autre} }} }</target>
-      </trans-unit>
-      <trans-unit id="myId" datatype="html">
-        <source>Hello</source>
-        <target state="new">Bonjour</target>
-      </trans-unit>
       <trans-unit id="newTest" datatype="html">
         <source>my-component works!</source>
-        <target>Bonjour my-component!</target>
+        <target>Bonjour i18n !</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
           <context context-type="linenumber">1,2</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="homeTitle" datatype="html">
+        <source>Welcome to My Angular App</source>
+        <target>Bonjour i18n !</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">2,3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="homeDescription" datatype="html">
+        <source>This is an example of Angular i18n with JSON format.</source>
+        <target>Bonjour i18n !</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">3,4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="my" datatype="html">
+        <source>my</source>
+        <target>Bonjour i18n !</target>
+      </trans-unit>
+      <trans-unit id="hello" datatype="html">
+        <source> Hello i18n!
+        </source>
+        <target>Bonjour i18n !</target>
       </trans-unit>
     </body>
   </file>
