--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -2,81 +2,36 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
-      <trans-unit id="introductionHeader" datatype="html">
+      <trans-unit id="hello" datatype="html">
         <source> Hello i18n!
-</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">2,6</context>
-        </context-group>
-        <note priority="1" from="description">An introduction header for this sample</note>
-        <note priority="1" from="meaning">User welcome</note>
-      </trans-unit>
-      <trans-unit id="5206857922697139278" datatype="html">
-        <source>I don&apos;t output any element</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">4</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="392942015236586892" datatype="html">
-        <source>Angular logo</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">6</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="4606963464835766483" datatype="html">
-        <source>Updated <x id="ICU" equiv-text="{minutes, plural, =0 {just now} =1 {one minute ago} other {{{ minutes }} minutes ago}}" xid="1887283401472369100"/></source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">9,11</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="2002272803511843863" datatype="html">
-        <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION"/> minutes ago}}</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">9,10</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="3560311772637911677" datatype="html">
-        <source>The author is <x id="ICU" equiv-text="{gender, select, male {male} female {female} other {other}}" xid="7670372064920373295"/></source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">15,17</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="7670372064920373295" datatype="html">
-        <source>{VAR_SELECT, select, male {male} female {female} other {other}}</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">15,16</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="3967965900462880190" datatype="html">
-        <source>Updated: <x id="ICU" equiv-text="{minutes, plural,
-  =0 {just now}
-  =1 {one minute ago}
-  other {{{ minutes }} minutes ago by {gender, select, male {male} female {female} other {other}}}}" xid="6988904457887003660"/>
-</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">17,22</context>
-        </context-group>
-      </trans-unit>
-      <trans-unit id="2508975984005233379" datatype="html">
-        <source>{VAR_PLURAL, plural, =0 {just now} =1 {one minute ago} other {<x id="INTERPOLATION"/> minutes ago by {VAR_SELECT, select, male {male} female {female} other {other}}}}</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">17,22</context>
-        </context-group>
+        </source>
       </trans-unit>
       <trans-unit id="newTest" datatype="html">
         <source>my-component works!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
           <context context-type="linenumber">1,2</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="homeTitle" datatype="html">
+        <source>Welcome to My Angular App</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">2,3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="homeDescription" datatype="html">
+        <source>This is an example of Angular i18n with JSON format.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">3,4</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="my" datatype="html">
+        <source>my</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
     </body>
