--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -4,7 +4,11 @@
     <body>
       <trans-unit id="hello" datatype="html">
         <source> Hello i18n!
-        </source>
+</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.component.html</context>
+          <context context-type="linenumber">2,5</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="newTest" datatype="html">
         <source>my-component works!</source>
@@ -31,7 +35,14 @@
         <source>my</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
-          <context context-type="linenumber">4</context>
+          <context context-type="linenumber">5</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="test" datatype="html">
+        <source>Test</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/my-component/my-component.component.html</context>
+          <context context-type="linenumber">5,6</context>
         </context-group>
       </trans-unit>
     </body>
